# scrapper_exercice_bairesdev

./: README.md  main.py  makefile  pyproject.toml  pytest.ini
.github/workflows/: standard.yml
db/: db_crawlers.sqlite
src/: scrapperByBeautifulSoup.py  scrapperByRequests.py  scrapperBySelenium.py  scrapper_by_beautifulsoup.py  scrapper_by_playwright.py  scrapper_by_selenium.py
src/beautifulsoup_scrapper/: freeImages.py
src/check_images/: yolo_verification.py
src/crawlers/: istockphoto.py
src/export/: export.py
src/logger/: logger.py
src/playwrightScrapper/: freeImages.py
src/playwright_scrapper/: freeImages.py
src/requestsScrapper/: freeImages.py
src/seleniumScrapper/: freeImages.py  istockphoto.py
src/seleniumScrapper/config/: webdriver.py
src/selenium_scrapper/: freeImages.py
tests/: test_scrapperByBeautifulSoup.py  test_scrapperByRequests.py
tests/crawlers/: mock_response.py  mocked_page.html  test_beautifulsoup.py  test_freeImages.py  test_istockphoto.py  test_playwright.py  test_selenium.py
tests/export/: mock_itens.py  test_export.py
