[tool.poetry]
name = "scrapper-exercice-bairesdev"
version = "0.1.0"
description = ""
authors = ["Robert <robert.sergio.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pandas = "^2.2.1"
beautifulsoup4 = "^4.12.3"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
