[tool.poetry]
name = "scrapper-exercise-bairesdev"
version = "0.1.0"
description = ""
authors = ["Robert <robert.sergio.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pandas = "^2.2.1"
beautifulsoup4 = "^4.12.3"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
openpyxl = "^3.1.2"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
playwright = "^1.42.0"
ultralytics = "^8.1.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
